feat: add About, Services, Portfolio, and Contact pages
- Create About page with technologies and milestones
- Create Services page with detailed offerings and process
- Create Portfolio page with 6 project case studies
- Create Contact page with form and contact options
- Add Input and Textarea UI components

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean-start": "bash scripts/start.sh",
+    "stop": "bash scripts/stop.sh"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
